Task31 tracing jaeger ready

--- a/task3/Архитектурное решение по трейсингу.md
+++ b/task3/Архитектурное решение по трейсингу.md
@@ -34,14 +34,20 @@
 
 ![alexandrit-c4](jewerly_c4_model.png)
 
-# Компромиссы
+## Компромиссы
 
 Реализация трейсинга в MES будет более трудозатратным, так как этот сервис изначально разрабатывался в другой компании. Тем не менее для полноты картины его надо реазовать, возможно в последнюю очередь при наличии ресурсов.
 
-# Безопасность
+## Безопасность
 
 Меры по защите системы трейсинга:
 
 * Внедрение аутентификации — зайти в систему смогут только сотрудники компании с актуальной учетной записью и ролью “Поддержка”.
 * Настройка авторизации средствами Jaeger
 * Включение шифрование трафика телеметрии по протоколу HTTPS
+
+## Задание 3.1: пример настроенного трейсинга
+
+![my-tracing](my-trace.png)
+
+
